--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,5 +3,10 @@
 @tailwind utilities;
 
 html {
+    height: 100%;
     font-feature-settings: "cv02","cv03","cv04","cv11";
+}
+
+body {
+    min-height: 100%;
 }
